--- a/doore/WebContent/index.html
+++ b/doore/WebContent/index.html
@@ -1,6 +1,3 @@
-<%@page contentType="text/html;charset=UTF-8" pageEncoding="UTF-8"%>
-<%@page session="true" import="java.util.*"%>
-<%@taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core"%>
 <!DOCTYPE html>
 <html lang="en">
 
@@ -34,7 +31,7 @@
             </div><!-- row -->
             
             <div class="col-sm-3 col-sm-offset-4">
-                <form name="login" class="form-signin" action="<c:url value='/action/login'/>" method="post">
+                <form name="login" class="form-signin" action='/action/login' method="post">
                 <label class="checkbox pull-left">
                 <input type="checkbox" value="remember-me"><i>Remember me</i>
                 </label>
@@ -45,7 +42,7 @@
                 
  
             <div class="row-sm-1 col-sm-offset-4">
-                        <a href="<c:url value='/action/findPassword'/>" class="pull-right need-help">Find password!</a>
+                        <a href='/action/findPassword' class="pull-right need-help">Find password!</a>
                         <a>/</a>
                         <a href="#" class="pull-left need-help">Sign up</a>       
                     </div>
