초기접속 과정 수정

--- a/doore/WebContent/index.html
+++ b/doore/WebContent/index.html
@@ -10,11 +10,11 @@
     <title>doore - Enjoy with your friends </title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../css/bootstrap.css" rel="stylesheet" type="text/css"/>
+    <link href="./css/bootstrap.css" rel="stylesheet" type="text/css"/>
 
     <!-- Add custom CSS here -->
-    <link href="../css/modern-business.css" rel="stylesheet" type="text/css"/>
-    <link href="../font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="./css/modern-business.css" rel="stylesheet" type="text/css"/>
+    <link href="./font-awesome/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
 <body>
