--- a/doore/WebContent/index.html
+++ b/doore/WebContent/index.html
@@ -44,7 +44,7 @@
             <div class="row-sm-1 col-sm-offset-4">
                         <a href='action/findPassword' class="pull-right need-help">Find password!</a>
                         <a>/</a>
-                        <a href="#" class="pull-left need-help">Sign up</a>       
+                        <a href="action/signup" class="pull-left need-help">Sign up</a>       
                     </div>
                 
             </form>
